# somars-vision

./: .gitignore  .main.py.un~  .test_main.py.un~  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  VALIDATION.md  main.py  mapping.py  requirements.txt  setup.py  snapshotter.py  split_data.py  telemetry.py  test_installation.py  test_main.py  test_main.py~  util.py
examples/: list_cameras.py  run_camera_detection.py  run_video_detection.py
install/: local_setup.sh  setup.sh
install/messages/share/messages/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/messages/share/messages/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_messages__rosidl_generator_cExport.cmake  export_messages__rosidl_generator_cppExport.cmake  export_messages__rosidl_generator_pyExport-noconfig.cmake  export_messages__rosidl_generator_pyExport.cmake  export_messages__rosidl_typesupport_fastrtps_cExport.cmake  messagesConfig-version.cmake  messagesConfig.cmake  (+8 more)
install/somars/lib/somars/: main
install/somars/share/somars/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
messages/: CMakeLists.txt  package.xml
messages/msg/: Detection.msg
somars/: setup.cfg  setup.py
somars/somars/: main.py  mapping.py  test_main.py
src/: __init__.py  config.py  detector.py
src/utils/: __init__.py  camera.py  video.py
weights/: .gitkeep
(+29 files in other folders)
