<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>somars</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="keldridge07@gmail.com">kyle</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>messages</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
